--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interactive Photo Gallery</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        
-    </footer>
+    <div class="container">
+        <input type="search" id="search" placeholder="Search">
+    </div>
 </body>
 </html>
