added css styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <title>Interactive Photo Gallery</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <div class="container">
         <input type="search" id="search" placeholder="Search">
+
+        <div class="thumbnail">
+            <img src="./photos/thumbnails/01.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/02.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/03.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/04.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/05.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/06.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/07.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/08.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/09.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/10.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/11.jpg" alt="Hay Bales">
+            <img src="./photos/thumbnails/12.jpg" alt="Hay Bales">
+        </div>
     </div>
 </body>
 </html>
