--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Photo Gallery</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <input type="search" id="search" placeholder="Search">
-
-        <div class="thumbnail">
+        <input type="search" name="search" id="search" placeholder="Search">
+        <div class="gallery">
+            <a href="photos/01.jpg" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.
+            ">
+                <img src="./photos/thumbnails/01.jpg" alt="Hay Bales">
+            </a>
             <img src="./photos/thumbnails/01.jpg" alt="Hay Bales">
             <img src="./photos/thumbnails/02.jpg" alt="Hay Bales">
             <img src="./photos/thumbnails/03.jpg" alt="Hay Bales">
@@ -26,5 +31,7 @@
             <img src="./photos/thumbnails/12.jpg" alt="Hay Bales">
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js    " async></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
