--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
             
 
-            <a class="thumbnail" class="thumbnail" href="photos/10.jpg" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
+            <a class="thumbnail" href="photos/10.jpg" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
                 <img src="./photos/thumbnails/10.jpg" alt="Sunset">
             </a>
             
